fix spacing on scatter plots

--- a/compiled_html/css/fresh.css
+++ b/compiled_html/css/fresh.css
@@ -264,7 +264,7 @@ div.card {
 
 .scatter {
 	width: 85%;
-	margin: 0 auto;
+	margin: 0 auto 40px auto;
 	height: 400px;
 }
 
